--- a/beaware/src/css/Login.module.css
+++ b/beaware/src/css/Login.module.css
@@ -129,3 +129,20 @@
     border-top-right-radius: 100px;
     border-bottom-right-radius: 100px;
   }
+
+  .sign-up-title {
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+    padding-bottom: 30px;
+    align-items: center;
+    justify-content: center;
+    padding-left: 50px;
+  }
+  .sign-up-title1 {
+    font-size: 2rem;
+    margin-bottom: 20px;
+    padding-bottom: 30px;
+    align-items: center;
+    justify-content: center;
+    padding-left: 50px;
+  }
