--- a/beaware/src/css/SignUp.css
+++ b/beaware/src/css/SignUp.css
@@ -50,7 +50,19 @@
   .left-side {
     position: relative;
     flex: 1;
+    overflow: hidden; /* Ensure the video stays within the bounds of the div */
   }
+  
+  .background-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensure the video covers the entire area */
+    z-index: -1; /* Push the video to the background */
+  }
+  
   
   .left-text {
     position: absolute;
