--- a/beaware/src/css/ManageProfile.css
+++ b/beaware/src/css/ManageProfile.css
@@ -343,6 +343,9 @@
     max-height: 300px; /* Set maximum height for the scrollable area */
     max-width: 500px;
     border: 4px solid #457b9d;
+    display: flex;
+    flex-direction: column;
+    gap: 0;
   }
 
   .stream-item:hover {
@@ -352,3 +355,13 @@
   .stream-item:active {
     background-color: rgba(0, 0, 0, 0.2); 
   }
+
+  .ruchi{
+    margin-left: 40px;
+    
+  }
+  
+  .buttonr{
+    margin-left: 10px;
+  }
+  
