--- a/Login.module.css
+++ b/Login.module.css
@@ -1,12 +1,12 @@
 /* Login.module.css */
-.container {
+.containerz {
   display: flex;
   align-items: right;
   height: 100vh;
-  
+
 }
 
-.leftPanel {
+.leftPanelz {
   flex: 1; /* Take up the entire left side */
   height: 100%;
   background-color: #457B9D; /* Background color for the left panel */
@@ -18,78 +18,89 @@
   flex-direction: column;
   justify-content: flex-start; /* Align content to the top */
   align-items: right;
+  position: relative;
+  animation: slideBackground 10s ;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5); 
+  z-index: 0;
   
 }
 
-.logo {
+.logoz {
   position:absolute;
   margin-left: 320px;
   margin-top: 20px;
 }
 
-.text {
+.textz {
   margin-top: 150px;
   color: white;
   font-size: 28px;
   text-align: center;
 }
 
-.formWrapper {
+.formWrapperz {
   flex: 1; /* Take up the remaining space */
   padding: 20px;
-  border-radius: 5px;
+  border-radius: 50px;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
   text-align: center;
   display: flex; /* Add flex display */
   flex-direction: column; /* Arrange items vertically */
   justify-content: center; /* Center items vertically */
   align-items: center; 
+  position: relative;
+  z-index: 2; 
 }
 
-.title {
+.titlez {
   font-size: 3rem;
   margin-bottom: 50px;
   color: #1D3557;
 }
 
-.form {
+.formz {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 300px;
 }
 
-.label {
+.labelz {
   font-size: 1.2rem;
   margin-top: 20px;
   margin-bottom: 5px;
-  text-align: center;
+  text-align: left;
   display: block;
 }
 
-.input {
-  width: 100%;
-  padding: 10px;
-  font-size: 1rem;
+.inputz {
+  width: 100%; 
+  padding: 20px 70px;
+  font-size: 0.8rem;
   border: 1px solid #ccc;
-  border-radius: 5px;
-  margin-bottom: 20px;
-  text-align: center;
+  border-radius: 10px;
+  margin-bottom: 15px;
 }
 
-.button {
-  width: 100%;
-  padding: 10px;
-  font-size: 1.2rem;
+.buttonz {
+  width: 100% !important;
+  padding: 20px 90px ;
+  font-size: 1rem;
   background-color: #457B9D;
   color: white;
   border: none;
-  border-radius: 5px;
+  border-radius: 10px; 
   cursor: pointer;
   margin-bottom: 20px;
 }
 
-.remember {
+.buttonz:hover{
+  background-color: #1D3557;
+
+}
+
+
+.rememberz {
   display: flex;
   align-items: center;
   font-size: 0.8rem;
@@ -98,25 +109,57 @@
 
 }
 
-.remember input {
+.rememberz input {
   margin-right: 10px;
 }
 
-.signup {
+.signupz {
   font-size: 0.8rem;
   margin-top: 20px;
   text-align: center;
 }
 
-.signup a {
+.signupz a {
   color: #457B9D;
   text-decoration: none;
 }
 
-.rightPanel {
+.rightPanelz {
   flex: 1;
   display: flex;
   justify-content: center;
   align-items: right;
   padding: 20px;
+  background-color: #fff;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+  z-index: 0;
+  position: relative;
+}
+
+
+
+@keyframes typing {
+  from { width: 0; }
+}
+
+@keyframes fadeInBackground {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+
+.fadeOutImage {
+  animation: fadeOut 1s forwards;
+}
+
+.fadeInVideo {
+  animation: fadeIn 1s forwards;
+}
+.backgroundVideo {
+  position: absolute; /* Position video absolutely */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ensure video covers entire container */
 }
